# virialpy

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: README.md  __init__.py  helpers.py  interactive_plots.py  streamlit_app.py
configs/: ar2.yaml  kr2.yaml
docs/: configuration.md  data_format.md  developer_notes.md  workflow_ar2.md
examples/ar2/: README.md
examples/template_new_system/: README.md
legacy/scripts/: ajuste_ILJ_Ar.py  ajuste_LJ_Ar.py  ajuste_ryd6_Ar.py  coef_vi1.py  coef_vi2.py
scripts/: gerar_figuras_tabelas_finais_ar2.py  run_ar2_full_pipeline.py  run_b2_validation_ar2.py  run_monte_carlo_comparison_ar2.py  run_multisystem_comparison.py  test_fit_ar2.py  teste_b2_comparison_ar2.py  teste_b2_workflow_ar2_lj.py  teste_graf.py  teste_plot_fit_ar2.py
scripts/dev/: teste_b2_comparison_ar2.py  teste_b2_method_comparison_ar2.py  teste_compare_potentials_ar2.py  teste_partitioned_b2_ar2.py  teste_salv_arq_ar2.py  teste_worflow.py
src/virialpy/: __init__.py  constants.py  units.py
tests/: __init__.py  test_b2.py  test_b2_comparison_workflow.py  test_b2_method_comparison.py  test_b2_method_plots.py  test_b2_plots.py  test_b2_validation.py  test_b2_workflow.py  test_cli.py  test_cli_run_config.py  test_cli_run_general.py  test_compare_potentials_workflow.py  test_comparison_plots.py  test_config.py  test_datasets.py  test_documentation_files.py  test_final_b2_plots.py  test_fit_plots.py  test_fit_workflow.py  test_fitting.py  test_integrators.py  test_io_writers.py  test_monte_carlo_comparison.py  test_monte_carlo_integrator.py  test_monte_carlo_plots.py  test_multisystem_analysis.py  test_multisystem_workflow.py  test_partitioned_b2.py  test_partitioned_b2_workflow.py  test_potentials.py  test_repository_files.py  test_run_from_config.py  test_streamlit_app_files.py  test_streamlit_helpers.py  test_streamlit_interactive_plots.py  test_tables.py
(+59 files in other folders)
