[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virialpy"
version = "0.1.0"
description = "Scientific tools for intermolecular potentials and second virial coefficient calculations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "virialpy contributors" }
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "seaborn",
  "lmfit",
  "typer",
  "pytest",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
virialpy = "virialpy.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
