[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virialpy"
version = "0.1.0"
description = "Scientific tools for intermolecular potentials and second virial coefficient calculations."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
  { name = "Sandro Brito" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "seaborn",
  "lmfit",
  "PyYAML",
  "plotly",
  "streamlit",
  "typer",
  "pytest",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
virialpy = "virialpy.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
